<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layMain" 
    android:background="@color/layMain_background" 
    android:padding="15dip" 
    android:gravity="center" 
>    
	
	<Spinner 
	     android:id="@+id/spWeekday"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:drawSelectorOnTop="true"    
	     android:prompt="@string/weekday_prompt"     
	 />
	 
	 <TimePicker android:id="@+id/tpTime" 
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		
	 />
	
	
	
	<Spinner 
		     android:id="@+id/spRingerMode"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:drawSelectorOnTop="true"    
		     android:prompt="@string/ringermode_prompt"    
	/>


	<Button android:id="@+id/btnAddRingerChangeSchedule" 
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:text="@string/btnAddRingerChangeSchedule_text" 
	    android:hint="@string/btnAddRingerChangeSchedule_hint"
	    android:onClick="btnAddRingerChangeSchedule_Click" 
	/>		
	
	<Button android:id="@+id/btnViewSchedules" 
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:text="@string/btnViewSchedules_text" 
		    android:hint="@string/btnViewSchedules_hint"
		    android:onClick="btnViewSchedules_Click" 
	/>
	
	<ScrollView android:id="@+id/svMessages"
				android:background="@color/layMain_offset_background"
				android:layout_width="fill_parent" 
				android:layout_height="100dip" 
	>
		<TextView android:id="@+id/tvMessages" 
				  android:textSize="15sp"				  	   
				  android:layout_width="fill_parent" 
				  android:layout_height="wrap_content" 
				  android:text=""
				  android:gravity="center_horizontal" 
				  
				   
		    />
	</ScrollView>
	
	
	
   
</LinearLayout>

